Correction de la symétrie des alignements des captures d'écrans et de la couleur du podium sur les petits écrans

--- a/2020/index.css
+++ b/2020/index.css
@@ -285,10 +285,12 @@ ol.podium > li::before {
 	background:
 		radial-gradient(circle, var(--medal) 5rem, #0000 0 5.4rem, var(--medal) 0 5.8rem, #0000 0) no-repeat,
 		var(--purple);
+	color: var(--yellow);
 	font-family: "Ewert", monospace;
 	font-size: 8rem;
 	font-style: normal;
 	font-weight: normal;
+	-webkit-text-fill-color: var(--purple);
 	text-align: center;
 }
 ol.podium > li:nth-of-type(1)::before {
@@ -598,8 +600,6 @@ section.team > figure ~ p > a:not([download])::before {
 		background:
 			radial-gradient(circle, var(--medal) 6rem, #0000 0 6.4rem, var(--medal) 0 6.8rem, #0000 0) no-repeat,
 			var(--purple);
-		color: var(--yellow);
-		-webkit-text-fill-color: var(--purple);
 	}
 	ol.podium > li:nth-of-type(1) {
 		order: 2;
@@ -657,7 +657,7 @@ section.team > figure ~ p > a:not([download])::before {
 		margin: auto -2rem;
 	}
 	section.team:nth-of-type(even) > figure {
-		left: calc(100% - 32.4rem);
+		left: calc(100% - 30.4rem);
 	}
 }
 @media screen and (min-width: 55em) {
@@ -678,6 +678,6 @@ section.team > figure ~ p > a:not([download])::before {
 		margin: auto 2rem;
 	}
 	section.team:nth-of-type(even) > figure {
-		left: calc(100% - 52.4rem);
+		left: calc(100% - 54.4rem);
 	}
 }
